# Stax

./: .gitignore  ADVANCED_SEARCH.md  ALL_FEATURES_IMPLEMENTED.md  ALL_PERMISSION_FIXES.md  BLENDER_PLUGIN_SUMMARY.md  DB_PATH_FIX.md  DEBUGGING_QUICK_REFERENCE.md  DEBUGGING_SESSION_SUMMARY.md  FEATURES_COMPLETE.md  FIX_NUMPY_ISSUE.md  GIF_GENERATION_FIX.md  GUI_GUIDE.md  INGESTION_PATH_FIX.md  LAUNCHER_COMPARISON.md  MEDIA_INFO_POPUP.md  NUKE_FEATURES_VERIFICATION.md  NUKE_INSTALLATION.md  NUKE_PLUGIN_ARCHITECTURE.md  NUKE_UI_FIX.md  PERMISSION_FIX.md  PROGRESS_REPORT.md  QUICKSTART.md  QUICK_TEST.md  README.md  READY_TO_TEST.md  REFACTORING.md  REFACTORING_DIAGRAM.txt  REFACTORING_SUMMARY.md  Roadmap.md  SESSION_2_COMPLETE.md  SESSION_2_SUMMARY.md  SESSION_3_SUMMARY.md  SESSION_4_FEATURES.md  SESSION_6_SUMMARY.md  SESSION_7_SUMMARY.md  StaX.spec  THUMBNAIL_AND_SCALING_IMPROVEMENTS.md  UNICODE_FIX.md  changelog.md  dependency_bootstrap.py  (+14 more)
.github/: SESSION_7_SUMMARY.md  copilot-instructions.md
docs/: documentation.md
resources/: style.qss
src/: __init__.py  api_server.py  config.py  convert_to_glb.py  dark_palette.py  db_manager.py  db_manager_additions.py  db_migrations.py  debug_manager.py  duplicate_detection.py  extensibility_hooks.py  ffmpeg_wrapper.py  file_lock.py  geometry_viewer.py  glb_converter.py  icon_loader.py  ingestion_core.py  ingestion_core_patch.py  nuke_bridge.py  nuke_bridge_patch.py  preview_cache.py  preview_worker.py  video_player_widget.py
tests/: example_usage.py  ffmpeg_downloader.py  ffplay_test.py  ffpyplayer_imageSequence.py  (+16 more)
(+43 files in other folders)
